# bitcoin-tcp-handshake

./: Cargo.toml  README.md  config.base.toml  docker-compose.yaml  rust-toolchain.toml
.cargo/: config.toml
crates/bitcoin-handshake/: Cargo.toml
crates/bitcoin-handshake/src/: connection.rs  error.rs  handshake.rs  lib.rs  processor.rs
crates/bitcoin-handshake/src/connection/: actor.rs  handle.rs
crates/duplex-tcp-stream/: Cargo.toml
crates/duplex-tcp-stream/src/: lib.rs
crates/entrypoint/: Cargo.toml
crates/entrypoint/src/: main.rs  trace.rs
crates/models/src/: lib.rs
crates/node/: Cargo.toml
crates/node/examples/handshake/: main.rs  trace.rs
crates/node/src/: connection.rs  error.rs  lib.rs
crates/node/src/connection/: actor.rs  handle.rs  incoming_receiver.rs  protocol_driver.rs
crates/settings/: Cargo.toml
crates/settings/src/: configs.rs  lib.rs  settings.rs  settings_service.rs
