[workspace]
resolver = "2"
members = ["crates/*"]


# Optimizations described here: https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
config = { path = "crates/config" }
models = { path = "crates/models" }
entrypoint = { path = "crates/entrypoint" }
