[workspace]
resolver = "2"
members = ["crates/*"]


# Optimizations described here: https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Our crates
settings = { path = "crates/settings" }
bitcoin-handshake = { path = "crates/bitcoin-handshake" }
duplex-tcp-stream = { path = "crates/duplex-tcp-stream" }
entrypoint = { path = "crates/entrypoint" }


# Utils
config = "0.13"
chrono = { version = "0.4.22", default-features = false, features = [
  "serde",
  "clock",
  "std",
] }
rand = "0.8"


# Serde
serde = { version = "1", features = ["serde_derive", "derive"] }

# tracing
# Used for structured logs with tracing https://github.com/tokio-rs/tracing/discussions/1906
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
] }

# Async
futures = "0.3"
tokio = { version = "1.0", features = ["full", "tracing"] }


# Error handling
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"


# Blockchain specific data types
bitcoin = { version = "0.29", default-features = false, features = ["serde", "std"] }
