[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our crates
bitcoin-handshake.workspace = true
settings.workspace = true

# Async
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
