[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our libraries
settings.workspace = true

# Tracing
tracing.workspace = true

# Utils
chrono.workspace = true
rand.workspace = true

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Bitcoin data types
bitcoin.workspace = true
